# mediaflow

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
mediaflow_core/: Cargo.toml
mediaflow_core/src/: file_downloads.rs  files.rs  folders.rs  formats.rs  lib.rs
mediaflow_derive/: Cargo.toml
mediaflow_derive/src/: lib.rs
src/: api.rs  config.rs  constants.rs  entities.rs  errors.rs  lib.rs  main.rs  tokens.rs  utils.rs
src/cli/: env.rs  error.rs  ini.rs  main.rs  opts.rs
tests/: derive.rs
