[package]
name = "mediaflow"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", optional = true, features = ["derive", "env"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.17", features = ["macros", "rt", "rt-multi-thread"] }
mediaflow_derive = { path = "./mediaflow_derive" }
serde-aux = { version = "3.0.1", default-features = false }
log = "0.4.16"
configparser = "3.0.0"
dirs = "4.0.0"
env_logger = "0.9.0"
async-recursion = "1.0.0"

[features]
cli = ["clap"]

[workspace]
members = ["mediaflow_derive"]
