[package]
name = "mediaflow"
version = "0.3.0"
license = "MIT"
edition = "2021"
description = "Unofficial SDK to interact with the Mediaflow Pro API"
repository = "https://github.com/jacobsvante/mediaflow"
documentation = "https://docs.rs/mediaflow/"
homepage = "https://github.com/jacobsvante/mediaflow"


[dependencies]
clap = { version = "3.1", optional = true, features = ["derive", "env"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.17", features = ["macros", "rt", "rt-multi-thread"] }
mediaflow_derive = { version = "0.3.0", path = "./mediaflow_derive" }
serde-aux = { version = "3.0.1", default-features = false }
log = "0.4.16"
configparser = { version = "3.0.0", optional = true }
dirs = { version = "4.0.0", optional = true }
env_logger = { version = "0.9.0", optional = true }
async-recursion = "1.0.0"
url = { version = "2.2.2", features = ["serde"] }
futures = "0.3.21"

[features]
cli = ["clap", "env_logger", "configparser", "dirs"]

[workspace]
members = ["mediaflow_derive"]
