[package]
name = "mediaflow"
version = "0.6.0"
license = "MIT"
edition = "2021"
description = "Unofficial SDK to interact with the Mediaflow Pro API"
repository = "https://github.com/jacobsvante/mediaflow"
documentation = "https://docs.rs/mediaflow/"
homepage = "https://github.com/jacobsvante/mediaflow"


[dependencies]
mediaflow_core = { version = "0.6.0", path = "./mediaflow_core" }
mediaflow_derive = { version = "0.6.0", path = "./mediaflow_derive" }
clap = { version = "3", optional = true, features = ["derive", "env"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde-aux = { version = "3", default-features = false }
log = "0.4"
configparser = { version = "3", optional = true }
dirs = { version = "4", optional = true }
env_logger = { version = "0.9", optional = true }
async-recursion = "1"
url = { version = "2", features = ["serde"] }
futures = "0.3"

[features]
cli = ["clap", "env_logger", "configparser", "dirs"]

[workspace]
members = ["mediaflow_derive", "mediaflow_core"]
