[package]
name = "mediaflow_core"
version = "0.6.1"
license = "MIT"
edition = "2021"
description = "Core entities for the unofficial Mediaflow Pro API SDK"
repository = "https://github.com/jacobsvante/mediaflow"
documentation = "https://docs.rs/mediaflow/"
homepage = "https://github.com/jacobsvante/mediaflow"

[dependencies]
serde = { version = "1", features = ["derive"] }
