[package]
name = "mediaflow_derive"
version = "0.10.0"
license = "MIT"
edition = "2021"
description = "Macros for the unofficial SDK to interact with the Mediaflow Pro API"
repository = "https://github.com/jacobsvante/mediaflow"
documentation = "https://docs.rs/mediaflow/"
homepage = "https://github.com/jacobsvante/mediaflow"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
syn = "1.0"
mediaflow_core = { version = "0.10.0", path = "../mediaflow_core" }
